# WinOpenclaw

./: .dockerignore  .env.example  .gitignore  .markdownlint-cli2.jsonc  .oxfmtrc.jsonc  .oxlintrc.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.sandbox  Dockerfile.sandbox-browser  README.md  SECURITY.md  appcast.xml  docker-setup.sh  openclaw.mjs  package.json  tmp-refactoring-strategy.md  tsconfig.json  tsconfig.plugin-sdk.dts.json  tsconfig.test.json  tsdown.config.ts  vitest.config.ts  vitest.e2e.config.ts  vitest.live.config.ts
.github/: actionlint.yaml  dependabot.yml  labeler.yml
apps/windows-installer/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows-installer/src-tauri/capabilities/: default.json
apps/windows-installer/src-tauri/src/: commands.rs  config.rs  install.rs  lib.rs  main.rs  run.rs  security.rs
docs/: brave-search.md  ci.md  docs.json  index.md  logging.md  pi-dev.md  pi.md  style.css  tts.md  vps.md
git-hooks/: pre-commit
scripts/: analyze_code_files.py  bundle-a2ui.sh  package-mac-app.sh  package-mac-dist.sh  protocol-gen-swift.ts  release-check.ts  restart-mac.sh  run-node.mjs  sync-labels.ts  sync-plugin-versions.ts  test-parallel.mjs  ui.js  update-clawtributors.ts  watch-node.mjs  write-cli-compat.ts  write-plugin-sdk-entry-dts.ts
src/: channel-web.barrel.test.ts  docker-setup.test.ts  entry.ts  logger.test.ts  logger.ts  logging.ts  polls.test.ts  runtime.ts  utils.test.ts  utils.ts  version.test.ts  version.ts
test/: auto-reply.retry.test.ts  gateway.multi.e2e.test.ts  (+4 more)
(+2456 files in other folders)
