[package]
name = "openclaw-windows-installer"
version = "0.1.0"
description = "Native Windows GUI installer and configurator for OpenClaw"
edition = "2021"
authors = ["OpenClaw"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
